feat - language arb:language change

--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -1,259 +1,303 @@
 {
   "@@locale": "tr",
-  "acNotWorkingProperly": "Klima düzgün çalışmıyor, lütfen kontrol edin.",
-  "accept": "Kabul Et",
-  "acceptDeclinedComplaint": "Reddedilen şikayeti kabul et.",
-  "acceptFunctionalityComingSoon": "Kabul etme özelliği yakında gelecek.",
+
+  "acNotWorkingProperly": "Klima düzgün çalışmıyor",
+  "accept": "Kabul et",
+  "acceptDeclinedComplaint": "Reddedilen Şikayeti Kabul Et",
+  "acceptFunctionalityComingSoon": "Kabul fonksiyonu yakında geliyor",
   "acceptTechnician": "Teknisyeni Kabul Et",
-  "acceptedSchedule": "Kabul edilen plan",
-  "acceptedSchedule_1": "Kabul Edilen Program",
+
+  "acceptedSchedule": "Kabul edilen program",
+  "acceptedSchedule_1": "Kabul edilen program",
   "account": "Hesap",
   "active": "Aktif",
   "addPhotos": "Fotoğraf Ekle",
-  "additionalInformation": "Ek Bilgi",
-  "admin": "Yönetici",
-  "agencyId": "Ajans Kimliği",
-  "agency": "Ajan",
-  "approvalFailed": "Onay başarısız oldu",
+  "additionalInformation": "Ekstra Bilgi",
+  "admin": "Admin",
+  "agencyId": "Ajans ID",
+
+  "agency": "Ajans",
+  "approvalFailed": "Onay başarısız",
   "approve": "Onayla",
-  "approveComment": "Yorumu onayla",
+  "approveComment": "Yorumu Onayla",
   "approved": "Onaylandı",
-  "areYouSureYouWantToLogOutOfYourAccount": "Hesabınızdan çıkış yapmak istediğinizden emin misiniz?",
-  "assignedTechnician": "Atanan teknisyen",
-  "attachImages": "Görüntüleri ekle",
-  "beSpecificAboutTheIssueForFasterResolution": "Sorunu net bir şekilde açıklayın, böylece daha hızlı çözülebilir.",
+
+  "areYouSureYouWantToLogOutOfYourAccount": "Hesabınızdan çıkmak istediğinizden emin misiniz?",
+  "assignedTechnician": "Atanmış Teknisyen",
+  "attachImages": "Görselleri Ekleyin",
+
+  "beSpecificAboutTheIssueForFasterResolution": "Sorununuzu daha hızlı çözmek için net olun",
   "camera": "Kamera",
   "cancel": "İptal Et",
   "cancel_1": "İPTAL",
-  "cannotCompleteDeclinedComplaintsPleaseReconsiderFirst": "Reddedilen şikayetler tamamlanamaz. Lütfen önce yeniden gözden geçirin.",
-  "cannotEditSolvedComplaints": "Çözülmüş şikayetler düzenlenemez",
-  "cannotFetchComplaintsTenantidIsNullOrEmpty": "Şikayetler alınamıyor: tenantID boş veya null",
+  "cannotCompleteDeclinedComplaintsPleaseReconsiderFirst": "Reddedilen şikayetler tamamlanamaz. Lütfen önce tekrar değerlendirin.",
+  "cannotEditSolvedComplaints": "Çözülmüş şikayetleri düzenleyemezsiniz",
+  "cannotFetchComplaintsTenantidIsNullOrEmpty": "Şikayetler getirilemedi: tenantID boş veya geçersiz",
   "cannotRescheduleSolvedComplaints": "Çözülmüş şikayetler yeniden planlanamaz",
-  "cannotResubmitSolvedComplaints": "Çözülmüş şikayetler yeniden gönderilemez",
-  "chooseFromGallery": "Galeriden seçin",
-  "clearAll": "Hepsini temizle",
+  "cannotResubmitSolvedComplaints": "Çözülmüş şikayetler tekrar gönderilemez",
+
+  "chooseFromGallery": "Galeriye Gözat",
+  "clearAll": "Hepsini Temizle",
   "close": "Kapat",
   "code": "Kod",
-  "comment": "Yorum yap",
-  "commentIsRequired": "Yorum yapmak zorunludur",
-  "commentText": "Yorum metni...",
+  "comment": "Yorum",
+  "commentIsRequired": "Yorum zorunludur",
+  "commentText": "yorum yazın...",
+
   "complaintApprovedSuccessfully": "Şikayet başarıyla onaylandı",
-  "complaintCreated": "Şikayet başarıyla oluşturuldu",
-  "complaintDeclined": "Şikayet reddedildi",
+  "complaintCreated": "Şikayet Oluşturuldu",
+  "complaintDeclined": "Şikayet Reddedildi",
   "complaintDeclinedSuccessfully": "Şikayet başarıyla reddedildi",
   "complaintDetails": "Şikayet Detayları",
   "complaintHistory": "Şikayet Geçmişi",
-  "complaintIsAlreadyAcceptedAndSolved": "Şikayet zaten kabul edildi ve çözüldü",
+  "complaintIsAlreadyAcceptedAndSolved": "Şikayet zaten kabul edilip çözüldü",
   "complaintIsAlreadyCompleted": "Şikayet zaten tamamlandı",
-  "complaintMarkedAsComplete": "Şikayet tamamlandı olarak işaretlendi",
-  "complaintResolved": "Şikayet çözüldü",
-  "complaintResubmitted": "Şikayet yeniden gönderildi",
+  "complaintMarkedAsComplete": "Şikayet tamamlanmış olarak işaretlendi",
+  "complaintResolved": "Şikayet Çözüldü",
+  "complaintResubmitted": "Şikayet tekrar gönderildi",
   "complaintSubmittedSuccessfully": "Şikayet başarıyla gönderildi",
-  "complaintsList": "Şikayet Listesi",
+  "complaintsList": "Şikayetler Listesi",
   "complete": "Tamamla",
-  "completeFunctionalityComingSoon": "Tamamlama özelliği yakında gelecek",
-  "completed": "Tamamlandı",
+  "completeFunctionalityComingSoon": "Tamamlanma işlevi yakında geliyor",
+  "completed": "tamamlandı",
   "completed_1": "Tamamlandı",
-  "confirmLogout": "Çıkışı Onayla",
+  "confirmLogout": "Çıkış yapmayı onayla",
   "contactInformation": "İletişim Bilgileri",
   "couldNotInitiateCallE": "Arama başlatılamadı: {e}",
   "createComplaint": "Şikayet Oluştur",
+
   "decline": "Reddet",
-  "declineComment": "Reddetme Yorumu",
+  "declineComment": "Yorumu Reddet",
   "declineReason": "Reddetme Nedeni",
-  "declineRequestFailed": "Reddetme isteği başarısız oldu",
-  "declined": "Reddedildi",
-  "declinedComplaintAction": "Reddedilen Şikayet Eylemi",
+  "declineRequestFailed": "Reddetme isteği başarısız",
+  "declined": "REDDEDİLDİ",
+  "declinedComplaintAction": "Reddedilen Şikayet İşlemi",
   "declinedComplaints": "Reddedilen Şikayetler",
   "declinedList": "Reddedilen Liste",
   "declined_1": "Reddedildi",
   "description": "Açıklama",
-  "descriptionIsRequired": "Açıklama gerekli",
-  "doYouWantToReconsiderAndAcceptThisComplaint": "Bu şikayeti yeniden değerlendirip kabul etmek istiyor musunuz?",
-  "doYouWantToReconsiderThisComplaintAndScheduleIt": "Bu şikayeti yeniden değerlendirip planlamak istiyor musunuz?",
+  "descriptionIsRequired": "Açıklama zorunludur",
+
+  "doYouWantToReconsiderAndAcceptThisComplaint": "Bu şikayeti tekrar gözden geçirip kabul etmek ister misiniz?",
+  "doYouWantToReconsiderThisComplaintAndScheduleIt": "Bu şikayeti tekrar gözden geçirip planlamak ister misiniz?",
   "edit": "Düzenle",
   "editDeclinedComplaint": "Reddedilen Şikayeti Düzenle",
-  "editFunctionalityForLandlordComingSoon": "Ev sahibi için düzenleme özelliği yakında gelecek",
+  "editFunctionalityForLandlordComingSoon": "Ev sahibi için düzenleme işlevi yakında geliyor",
+
   "email": "E-posta",
   "email_1": "E-posta:",
-  "enterTextHere": "Metni buraya girin...",
-  "failedToDetermineUserTypePleaseTryLoggingInAgain": "Kullanıcı türü belirlenemedi. Lütfen tekrar giriş yapmayı deneyin.",
+  "enterTextHere": "Buraya metin girin...",
+
+  "failedToDetermineUserTypePleaseTryLoggingInAgain": "Kullanıcı tipi belirlenemedi. Lütfen tekrar giriş yapmayı deneyin.",
   "failedToLoadTechnicianInformation": "Teknisyen bilgisi yüklenemedi",
-  "feedbackIsRequired": "Geri bildirim gerekli",
+  "feedbackIsRequired": "Geri bildirim gereklidir",
   "flag": "Bayrak",
-  "forgotPassword": "Şifrenizi mi unuttunuz?",
+  "forgotPassword": "Şifremi unuttum?",
+
+  "resubmitComplaint": "Şikayet Tekrar Gönder",
+  "mentionMissingOrUnclear": "Son şikayetinizde eksik veya belirsiz olanı belirtin",
+  "originalComment": "Orijinal Yorum:",
+  "resubmissionFailed": "Yeniden gönderme başarısız oldu",
+
   "gallery": "Galeri",
   "gettingTechnicianInfo": "Teknisyen bilgisi alınıyor...",
-  "gettingTechnicianInfo_1": "Teknisyen Bilgisi Alınıyor...",
+  "gettingTechnicianInfo_1": "Teknisyen bilgisi alınıyor...",
+
   "history": "Geçmiş",
-  "holdOnBringingEverythingTogether": "Bekleyin, her şey bir araya getiriliyor...",
-  "holdOnGettingHistory": "Bekleyin, geçmiş alınıyor...",
+
+  "holdOnBringingEverythingTogether": "Biraz bekleyin, her şeyi bir araya getiriyoruz...",
+  "holdOnGettingHistory": "Biraz bekleyin, geçmiş alınıyor...",
   "home": "Ana Sayfa",
-  "imageGalleryComplaintImagecount": "Resim Galerisi ({imageCount})",
-  "imageLoadingCancelled": "Resim yükleme iptal edildi",
-  "inProgress": "Devam ediyor",
-  "inactive": "Pasif",
-  "initialImages": "Başlangıç görüntüleri",
-  "invalidTime": "Geçersiz Zaman",
-  "issueList": "Sorun Listesi",
+
+  "imageGalleryComplaintImagecount": "Görsel Galerisi ({imageCount})",
+  "imageLoadingCancelled": "Görsel yüklemesi iptal edildi",
+
+  "inProgress": "devam ediyor",
+  "inactive": "pasif",
+  "initialImages": "İlk görseller",
+  "invalidTime": "Geçersiz zaman",
+  "issueList": "Sorunlar Listesi",
+
   "kitchenCabinetRepair": "Mutfak dolabı tamiri",
-  "landlord": "Ev Sahibi",
-  "landlordDashboard_1": "Ev Sahibi Panosu",
-  "landlordId": "Ev Sahibi Kimliği",
+  "landlord": "Ev sahibi",
+
+  "landlordDashboard_1": "Ev Sahibi Paneli",
+  "landlordId": "Ev Sahibi ID",
   "landlordInformation": "Ev Sahibi Bilgisi",
   "landlordName": "Ev Sahibi Adı",
-  "landlord_1": "Ev Sahibi",
-  "landlordidIsNullOrEmptyCannotFetchComplaints": "Ev Sahibi ID boş veya null, şikayetler alınamıyor",
+  "landlord_1": "EV SAHİBİ",
+  "landlordidIsNullOrEmptyCannotFetchComplaints": "Ev Sahibi ID boş ya da geçersiz, şikayet getirilemiyor",
   "language": "Dil",
+
   "lastComment": "Son Yorum",
   "lastCommentDetails": "Son Yorum Detayları",
   "lastComments": "Son Yorumlar",
+
   "loading": "Yükleniyor...",
   "loadingComplaints": "Şikayetler Yükleniyor...",
   "loadingDeclinedComplaints": "Reddedilen Şikayetler Yükleniyor...",
-  "loadingImages": "Görüntüler yükleniyor...",
+  "loadingImages": "Görseller Yükleniyor...",
   "loadingPendingComplaints": "Bekleyen Şikayetler Yükleniyor...",
-  "loadingSolvedComplaints": "Çözülmüş Şikayetler Yükleniyor...",
+  "loadingSolvedComplaints": "Çözülen Şikayetler Yükleniyor...",
   "loadingUserInfo": "Kullanıcı Bilgisi Yükleniyor...",
   "login": "Giriş Yap",
+
   "loginInProgress": "Giriş yapılıyor...",
-  "loginSuccessful": "Giriş başarılı!",
-  "loginSuccessfulButFailedToLoadDashboardE": "Giriş başarılı ancak pano yüklenemedi: {e}",
-  "loginSuccessfulFetchingUserType": "Giriş başarılı - kullanıcı türü alınıyor",
+  "loginSuccessful": "Başarıyla giriş yapıldı!",
+  "loginSuccessfulButFailedToLoadDashboardE": "Başarıyla giriş yapıldı fakat panel yüklenemedi: {e}",
   "logout": "Çıkış Yap",
-  "mailto": "mailto:",
+
   "maintenanceScheduled": "Bakım Planlandı",
-  "markAsComplete": "Tamamlandı Olarak İşaretle",
-  "nA": "Uygulanamaz",
-  "name": "İsim",
-  "navigatingToLandlordDashboard": "Ev Sahibi Panosuna Yönlendiriliyor",
-  "navigatingToTenantDashboard": "Kiracı Panosuna Yönlendiriliyor",
+  "markAsComplete": "Tamamla olarak işaretle",
+  "nA": "Geçerli Değil",
+  "name": "Ad",
+  "navigatingToLandlordDashboard": "Ev Sahibi Paneline yönlendiriliyorsunuz",
+  "navigatingToTenantDashboard": "Kiracı Paneline yönlendiriliyorsunuz",
   "newComplaint": "Yeni Şikayet",
-  "noCategoriesAvailable": "Kategori bulunamadı",
-  "noComments": "Yorum yok",
-  "noCommentsAvailable": "Mevcut yorum yok",
-  "noCommentsYet": "Henüz yorum yok",
-  "noComplaintsToShow": "Gösterilecek şikayet yok",
-  "noDeclineReasonProvided": "Reddetme nedeni belirtilmedi",
-  "noDeclinedComplaintsToShow": "Gösterilecek reddedilmiş şikayet yok",
-  "noDetailsProvided": "Detay verilmedi.",
+  "noCategoriesAvailable": "Kategori Yok",
+  "noComments": "Yorum Yok",
+  "noCommentsAvailable": "Yorum Yok",
+  "noCommentsYet": "Henüz Yorum Yok",
+  "noComplaintsToShow": "Gösterilecek Şikayet Yok",
+  "noDeclineReasonProvided": "Reddetme nedeni sağlanmadı",
+  "noDeclinedComplaintsToShow": "Gösterilecek Reddedilen Şikayet Yok",
+  "noDetailsProvided": "Detay Sağlanmadı",
   "noHistoryRecordsFound": "Geçmiş kaydı bulunamadı",
   "noOptionsAvailable": "Seçenek yok",
-  "noPendingComplaintsToShow": "Gösterilecek bekleyen şikayet yok",
-  "noResolutionCommentsAvailable": "Çözüm yorumu yok",
-  "noSegment": "Segment yok",
-  "noSegmentsAvailable": "Mevcut segment yok",
-  "noSolvedComplaintsToShow": "Gösterilecek çözülmüş şikayet yok",
+  "noPendingComplaintsToShow": "Gösterilecek Bekleyen Şikayet Yok",
+  "noResolutionCommentsAvailable": "Çözüm Yorumları Yok",
+
+  "noSegment": "Segment Yok",
+  "noSegmentsAvailable": "Segment Yok",
+  "noSolvedComplaintsToShow": "Gösterilecek Çözülen Şikayet Yok",
   "notProvided": "Sağlanmadı",
-  "numberNd": "{number}.",
-  "numberRd": "{number}.",
-  "numberSt": "{number}.",
-  "numberTh": "{number}.",
-  "onlyAddedImagestoaddLengthImagesMaximumLimitReached": "Sadece {length} resim eklendi. Maksimum sınıra ulaşıldı.",
+
+  "numberNd": "{number}nc",
+  "numberRd": "{number}nc",
+  "numberSt": "{number}nc",
+  "numberTh": "{number}nc",
+
+  "onlyAddedImagestoaddLengthImagesMaximumLimitReached": "Sadece {length} fotoğraf eklendi. Maksimum limit reached.",
+  "maximumImagesAllowed": "Maksimum {maxImages} fotoğraf eklenebilir.",
   "page": "{page}",
   "password": "Şifre",
-  "pending": "Beklemede",
+  "pending": "beklemede",
   "pendingComplaints": "Bekleyen Şikayetler",
+
   "pending_1": "Beklemede",
   "phone": "Telefon",
   "phone_1": "Telefon:",
-  "pleaseCheckYourConnectionAndTryAgain": "Bağlantınızı kontrol edip tekrar deneyin.",
-  "pleaseEnterBothUsernameAndPassword": "Lütfen kullanıcı adı ve şifre girin",
+  "pleaseCheckYourConnectionAndTryAgain": "Bağlantınızı kontrol edin ve tekrar deneyin",
+  "pleaseEnterBothUsernameAndPassword": "Lütfen hem kullanıcı adınızı hem de şifrenizi girin",
   "pleaseEnterYourPassword": "Lütfen şifrenizi girin",
   "pleaseEnterYourUsername": "Lütfen kullanıcı adınızı girin",
   "pleaseFillAllRequiredFields": "Lütfen tüm gerekli alanları doldurun",
+
   "pleaseProvideYourFeedback": "Lütfen geri bildiriminizi sağlayın",
   "pleaseSelectASegment": "Lütfen bir segment seçin",
-  "pleaseSelectASegment_1": "Lütfen bir Segment seçin",
-  "pleaseWriteAComment": "Lütfen bir Yorum yazın",
+  "pleaseWriteAComment": "Lütfen bir Yorum Yazın",
+
   "preparing": "Hazırlanıyor...",
-  "proMatrixNeedsInternetConnection": "Pro Matrix'in İnternet Bağlantısına İhtiyacı Var",
+  "proMatrixNeedsInternetConnection": "Pro Matrix İnternet Bağlantısı Gerektiriyor",
   "problem": "PROBLEM",
   "profile": "Profil",
-  "propertyId": "Mülk Kimliği",
+
+  "propertyId": "Mülk ID",
   "propertyName": "Mülk Adı",
   "propertyOwner": "Mülk Sahibi",
-  "quickActions": "Hızlı Eylemler",
+
+  "quickActions": "Hızlı İşlemler",
   "readLess": "Daha Az Oku",
   "readMore": "Daha Fazla Oku",
-  "recentActivity": "Son Etkinlikler",
-  "reconsider": "Yeniden Değerlendir",
-  "reconsiderAccept": "Yeniden Değerlendir ve Kabul Et",
-  "reconsiderFunctionalityComingSoon": "Yeniden değerlendirme özelliği yakında gelecek",
-  "reconsiderSchedule": "Yeniden Değerlendir ve Planla",
+  "recentActivity": "Son Etkinlik",
+
+  "reconsider": "Tekrar Değerlendir",
+  "reconsiderAccept": "Tekrar Değerlendir & Kabul Et",
+  "reconsiderFunctionalityComingSoon": "Tekrar değerlendirme işlevi yakında geliyor",
+  "reconsiderSchedule": "Tekrar Değerlendir & Planla",
   "registrationType": "Kayıt Türü",
-  "rejected": "Reddedildi",
+  "rejected": "reddedildi",
   "rejected_1": "Reddedildi",
   "rememberMe": "Beni Hatırla",
   "reschedule": "Yeniden Planla",
   "rescheduleDate": "Yeniden Planlama Tarihi",
   "rescheduleDeclinedComplaint": "Reddedilen Şikayeti Yeniden Planla",
-  "rescheduleFunctionalityComingSoon": "Yeniden planlama özelliği yakında gelecek",
-  "rescheduleRequest": "Yeniden Planlama İsteği",
+  "rescheduleFunctionalityComingSoon": "Yeniden planlama işlevi yakında geliyor",
+
+  "rescheduleRequest": "Yeniden Planlama Talebi",
   "rescheduleTime": "Yeniden Planlama Zamanı",
-  "rescheduled": "Yeniden Planlandı",
+  "rescheduled": "yeniden planlandı",
+
   "resolutionComments": "Çözüm Yorumları",
-  "mentionMissingOrUnclear": "Son şikayetinizde eksik veya belirsiz olanı belirtin",
-  "originalComment": "Orijinal Yorum:",
-  "resubmissionFailed": "Yeniden gönderim başarısız oldu",
   "resolved": "Çözüldü",
-  "resolvedList": "Çözülen Liste",
+  "resolvedList": "Çözülen Şikayetler Listesi",
   "resolved_1": "Çözüldü",
-  "resubmit": "Yeniden Gönder",
-  "resubmitComplaint": "Şikayeti Yeniden Gönder",
-  "resubmitFunctionalityComingSoon": "Yeniden gönderme özelliği yakında gelecek",
-  "resubmitted": "Yeniden gönderildi",
-  "retry": "Yeniden Dene",
+  "resubmit": "Tekrar Gönder",
+  "resubmitFunctionalityComingSoon": "Tekrar gönderme işlevi yakında geliyor",
+  "resubmitted": "tekrar gönderildi",
+
+  "retry": "Tekrar Dene",
+
   "scheduleDate": "Planlama Tarihi:",
   "scheduleTime": "Planlama Zamanı:",
+
   "segment": "Segment",
   "selectAnOption": "Bir seçenek seçin",
   "selectLanguage": "Dil Seçin",
-  "sentToLandlord": "Ev Sahibine Gönderildi",
+
+  "sentToLandlord": "Ev Sahibine gönderildi",
   "sentToLandlord_1": "Ev Sahibine Gönderildi",
+
   "settings": "Ayarlar",
   "signInToContinue": "Devam etmek için giriş yapın",
-  "solved": "Çözüldü",
+  "solved": "ÇÖZÜLDÜ",
   "solvedComplaints": "Çözülen Şikayetler",
   "solved_1": "Çözüldü",
-  "sourcePermissionDenied": "{source} izni reddedildi",
+  "sourcePermissionDenied": "{source} izin reddedildi",
+
   "submit": "GÖNDER",
   "submitComplaint": "ŞİKAYET GÖNDER",
   "submitFeedback": "GERİ BİLDİRİM GÖNDER",
-  "submitRescheduleRequest": "Yeniden Planlama İsteği Gönder",
-  "successfullyFetchedImagesLengthImages": "Başarıyla {images} resim alındı",
+  "submitRescheduleRequest": "Yeniden Planlama Talebini Gönder",
+  "successfullyFetchedImagesLengthImages": "Başarıyla {images} görsel alındı",
+
   "takePhoto": "Fotoğraf Çek",
   "technician": "Teknisyen",
   "technicianAcceptedSuccessfully": "Teknisyen başarıyla kabul edildi",
-  "technicianAssigned": "Teknisyen Atandı",
+  "technicianAssigned": "Teknisyen atandı",
   "technicianAssigned_1": "Teknisyen Atandı",
-  "technicianDataNotAvailablePleaseTryAgain": "Teknisyen verisi mevcut değil. Lütfen tekrar deneyin.",
+
+  "technicianDataNotAvailablePleaseTryAgain": "Teknisyen verisi alınamadı. Lütfen tekrar deneyin.",
   "technicianDetails": "Teknisyen Detayları",
   "technicianName": "Teknisyen Adı:",
   "technicianRescheduledSuccessfully": "Teknisyen başarıyla yeniden planlandı",
-  "tel": "Tel:",
-  "telCleannumber": "Tel:{cleanNumber}",
+
   "tenant": "Kiracı",
-  "tenantDashboard_1": "Kiracı Panosu",
-  "tenantInfoId": "Kiracı Bilgi Kimliği",
+  "submissionFailed": "Gönderim başarısız: Bir şeyler ters gitti",
+
+  "tenantDashboard_1": "Kiracı Paneli",
+  "tenantInfoId": "Kiracı Bilgisi ID",
   "tenantInformation": "Kiracı Bilgisi",
   "tenantName": "Kiracı Adı",
   "tenant_1": "KİRACI",
-  "tenant_2": "Kiracı",
+  "tenant_2": "kiracı",
+
   "thisComplaintHasBeenDeclinedWhatWouldYouLikeToDo": "Bu şikayet reddedildi. Ne yapmak istersiniz?",
-  "thisComplaintHasBeenDeclinedWouldYouLikeToResubmitItWithModifications": "Bu şikayet reddedildi. Değişikliklerle yeniden göndermek ister misiniz?",
+  "thisComplaintHasBeenDeclinedWouldYouLikeToResubmitItWithModifications": "Bu şikayet reddedildi. Onunla değişiklik yapıp tekrar göndermek ister misiniz?",
   "ticket": "Bilet# {num}",
-  "unnamedSegment": "İsimsiz Segment",
-  "updateComplaint": "Şikayeti Güncelle",
-  "userInfoNotLoadedTryAgain": "Kullanıcı bilgisi yüklenmedi. Lütfen tekrar deneyin.",
+
+  "unnamedSegment": "Adı Konulmamış Segment",
+  "updateComplaint": "ŞİKAYETİ GÜNCELLE",
+
+  "userInfoNotLoadedTryAgain": "Kullanıcı bilgisi yüklenemedi. Lütfen tekrar deneyin.",
   "username": "Kullanıcı Adı",
   "viewProfile": "Profili Görüntüle",
   "waterLeakageInBathroom": "Banyoda su sızıntısı",
-  "welcome": "Hoş Geldiniz",
+  "welcome": "Hoş geldiniz",
+
   "writeCommentOrInstructions": "Yorum veya Talimat Yazın",
   "writeYourCommentHere": "Yorumunuzu Buraya Yazın:",
   "yearMonthDay": "{year}-{month}-{day}",
-  "yourFeedback": "Geri Bildiriminiz",
-  "submissionFailed": "Gönderim başarısız oldu: Bir şeyler yanlış gitti",
-  "yyyyMmDd": "yyyy-MM-dd"
+
+  "yourFeedback": "Geri Bildiriminiz"
 }
