fix - dashboards: tr title language

--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -232,7 +232,7 @@
 
   "resolutionComments": "Çözüm Yorumları",
   "resolved": "Çözüldü",
-  "resolvedList": "Çözülen Şikayetler Listesi",
+  "resolvedList": "Çözülen Listesi",
   "resolved_1": "Çözüldü",
   "resubmit": "Tekrar Gönder",
   "resubmitFunctionalityComingSoon": "Tekrar gönderme işlevi yakında geliyor",
